// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon has correct aria-hidden property applied when accessibilityLabel is an empty string 1`] = `
<svg
  aria-hidden={true}
  aria-label=""
  className="icon gray iconBlock"
  height={16}
  role="img"
  viewBox="0 0 24 24"
  width={16}
>
  <title>
    
  </title>
  <path
    d="test-file-stub"
  />
</svg>
`;

exports[`Icon renders 1`] = `
<svg
  aria-hidden={null}
  aria-label="Add"
  className="icon gray iconBlock"
  height={16}
  role="img"
  viewBox="0 0 24 24"
  width={16}
>
  <title>
    Add
  </title>
  <path
    d="test-file-stub"
  />
</svg>
`;

exports[`Icon uses the dangerouslySetSvgPath prop when icon path is not specified 1`] = `
<svg
  aria-hidden={null}
  aria-label="Line"
  className="icon gray iconBlock"
  height={16}
  role="img"
  viewBox="0 0 24 24"
  width={16}
>
  <title>
    Line
  </title>
  <path
    d="M13.00,20.00"
  />
</svg>
`;
